Bug 460950 - Adding a new category, it will ignore currency setting and use the default
Summary: Adding a new category, it will ignore currency setting and use the default
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 460949 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-24 16:04 UTC by Dawid Wróbel
Modified: 2024-12-19 10:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2022-10-24 16:04:17 UTC
SUMMARY
When adding a new category, the currency chosen is ignored — after saving the currency will be the default book currency..

STEPS TO REPRODUCE
1. Add a new category
2. Choose a currency that is not a default one for the book

OBSERVED RESULT
Currency of the category is the default one for the book

EXPECTED RESULT
Currency should be as chosen
Comment 1 Dawid Wróbel 2022-10-24 16:04:48 UTC
This applies to changing a currency of existing account as well.
Comment 2 adi.sav 2022-10-24 18:12:57 UTC
I can confirm this bug.
Comment 3 Thomas Baumgart 2022-10-24 19:35:06 UTC
Git commit 186184d0c0a2971387d53aa1da63a23cef41874d by Thomas Baumgart.
Committed on 24/10/2022 at 19:34.
Pushed by tbaumgart into branch 'master'.

Setup account object before the dialog is closed

M  +14   -20   kmymoney/dialogs/knewaccountdlg.cpp

https://invent.kde.org/office/kmymoney/commit/186184d0c0a2971387d53aa1da63a23cef41874d
Comment 4 adi.sav 2022-10-25 08:30:51 UTC
(In reply to Thomas Baumgart from comment #3)

I confirm it being fixed in nightly build 1688. Thank you! :)
Comment 5 Thomas Baumgart 2022-10-26 10:49:12 UTC
Git commit 55e5c3c3723b682ffa23fcb2104e04bf40994cb2 by Thomas Baumgart.
Committed on 26/10/2022 at 10:48.
Pushed by tbaumgart into branch '5.1'.

Setup account object before the dialog is closed
FIXED-IN: 5.1.4

(cherry picked from commit 186184d0c0a2971387d53aa1da63a23cef41874d)

M  +13   -12   kmymoney/dialogs/knewaccountdlg.cpp

https://invent.kde.org/office/kmymoney/commit/55e5c3c3723b682ffa23fcb2104e04bf40994cb2
Comment 6 Thomas Baumgart 2022-10-27 06:30:11 UTC
*** Bug 460949 has been marked as a duplicate of this bug. ***