Setup account object before the dialog is closed

BUG: 460950
FIXED-IN: 5.1.4

(cherry picked from commit 186184d0c0a2971387d53aa1da63a23cef41874d)